(3) Forward port PowerMenu
to 4.2.1 slim

Patchset2
- cleanup

Change-Id: Ia4a484bbd424b04ddde7dc516cd947ab85839c47

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4658,4 +4658,12 @@
     <string name="profile_add_nfc_text">This NFC tag refers to an unknown profile. Attaching this NFC tag to an existing profile will allow for selecting the profile in the future.</string>
     <string name="profile_select">Select profile</string>
 
+    <!-- Power menu enable disable -->
+    <string name="power_menu_title">Power menu</string>
+    <string name="power_menu_reboot_title">Reboot menu</string>
+    <string name="power_menu_screenshot_title">Screenshot</string>
+    <string name="power_menu_profiles_title">Profile switcher</string>
+    <string name="power_menu_airplane_title">Airplane mode</string>
+    <string name="power_menu_silent_title">Sound panel</string>
+
 </resources>
