--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4671,4 +4671,20 @@
     <string name="power_menu_airplane_title">Airplane mode</string>
     <string name="power_menu_silent_title">Sound panel</string>
 
+    <!-- About -->
+    <string name="title_about">About Slim</string>
+    <string name="devs">Developer</string>
+    <string name="links">Official links</string>
+    <string name="contributors">Contributors</string>
+    <string name="slim_website_title">Slim Website</string>
+    <string name="slim_source_title">Slim Source</string>
+    <string name="slim_website_summary">slimroms.net\nFind all latest Slim news here</string>
+    <string name="slim_source_summary">SlimRoms are fully open source. Source at github.com/SlimRoms</string>
+    <string name="about_cna">About Slim ROms</string>
+    <string name="about_slim_summary">@null</string>
+    <string name="donate_slim">http://forum.xda-developers.com/donatetome.php?u=4135991</string>
+    <string name="donate_cna">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=JN6B9PY4V2388</string>
+    <string name="donate_cyanogenmod">http://forum.cyanogenmod.com/donate</string>
+    <string name="donate_aokp">http://aokp.co/</string>
+
 </resources>
