--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4873,4 +4873,7 @@
     <string name="battery_light_medium_color_title">Charging</string>
     <string name="battery_light_full_color_title">Fully charged</string>
 
+    <!-- Themes settings  -->
+    <string name="themes_settings_title">Themes</string>
+
 </resources>
