port colorpicker and add hex field to light dialog
Fix tabs and whitespace

I think I got it all this time

Patchset 2-6
-rebased

Change-Id: I81359099ece1a8fc395754a942d11b8114b4eec7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4934,4 +4934,14 @@
     <string name="tiles_reset_title">Reset</string>
     <string name="tiles_reset_message">Restore the default displayed tiles and layout?</string>
 
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on Color to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#FF000000</string>
+    <string name="set">Set</string>
+    <string name="ics_color">Holo</string>
+
 </resources>
