--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4897,6 +4897,7 @@
     <string name="notification_background_default_wallpaper">Default background</string>
     <string name="notification_drawer_custom_background_dialog_title">Choose color</string>
     <string name="notif_wallpaper_alpha_title">Notification background transparency</string>
+    <string name="notif_alpha_title">Notification Rows transparency</string>
 
     <!-- Quick settings panel -->
     <string name="quick_settings_panel_title">Quick Settings panel</string>
