Add ModVersion to about phone and hide system updates
remove system updates

Patch Set 5: Fixed conflicts

Change-Id: Ic52b1d72fcf23679f1d40b0547a5d820ffe29b93

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4430,9 +4430,6 @@
     <!-- Hostname setting -->
     <string name="device_hostname">Device hostname</string>
 
-    <!-- About phone screen,  setting option name-->
-    <string name="mod_version">CyanogenMod version</string>
-    <string name="mod_version_default">Unknown</string>
     <!-- About phone screen, build date of ROM -->
     <string name="build_date">Build date</string>
     <string name="build_date_default">2012-01-01-0000</string>
@@ -5061,5 +5058,9 @@
     <string name="volume_key_cursor_control_off">Disabled</string>
     <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
     <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
+
+    <!-- About phone screen,  setting option name-->
+    <string name="mod_version">Slim version</string>
+    <string name="mod_version_default">Unknown</string>
 
 </resources>
