Settings Port "Option to control cursor in text fields using volume keys (2/2)"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5057,5 +5057,9 @@
     <string name="title_keyboard_input">Keyboard and input methods</string>
     <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
     <string name="disable_fullscreen_keyboard_summary">Landscape keyboard will never take up entire screen</string>
+    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
+    <string name="volume_key_cursor_control_off">Disabled</string>
+    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
+    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
 
 </resources>
