--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4718,7 +4718,7 @@
     <string name="power_menu_expanded_desktop">Expanded desktop</string>
     <string name="power_menu_profiles_title">Profile switcher</string>
     <string name="power_menu_airplane_title">Airplane mode</string>
-    <string name="power_menu_silent_title">Sound panel</string>
+    <string name="power_menu_sound_title">Sound panel</string>
 
     <!-- About -->
     <string name="title_about">About Slim</string>
@@ -4753,6 +4753,10 @@
 
     <string name="link_volume_ringtones">Link ringtone &amp; notifications volumes</string>
     <string name="link_volume_mutes">Silent mode affects notifications</string>
+    <string name="ring_mode_title">Ring mode</string>
+    <string name="ring_mode_normal">Normal</string>
+    <string name="ring_mode_vibrate">Vibrate</string>
+    <string name="ring_mode_mute">Mute</string>
 
     <!-- Sound settings screen -->
     <string name="volume_overlay_title">Volume panel style</string>
@@ -4762,6 +4766,7 @@
     <string name="sound_title">Sound</string>
     <string name="volbtn_music_controls_title">Volume rocker music controls</string>
     <string name="volbtn_music_controls_summary">When screen off, long-pressing the volume rockers will seek music tracks</string>
+
     <!-- Safe headset volume restore checkbox -->
     <string name="safe_headset_restore_title">Safe headset volume</string>
     <string name="safe_headset_restore_summary">Prevent loud volume levels when headset is first plugged in</string>
