--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4814,8 +4814,8 @@
     <string name="status_bar_notif_count_title">Show notification count</string>
     <string name="status_bar_notif_count_summary">Display number of pending notifications</string>
 
-    <!-- General UI -->
-    <string name="title_ui">General UI</string>
+    <!-- General Settings -->
+    <string name="title_slim_general">General</string>
     <string name="display_short">Display</string>
     <string name="misc_short">Misc</string>
     <string name="alt_resolver">Use Alt Default App Grid</string>
@@ -5070,5 +5070,13 @@
     <!-- About phone screen,  setting option name-->
     <string name="mod_version">Slim version</string>
     <string name="mod_version_default">Unknown</string>
+
+    <!-- Wi-Fi region code settings-->
+    <string name="wifi_setting_countrycode_title">Wi-Fi region code</string>
+    <!-- Wi-Fi settings screen, setting summary for setting the wifi frequency band [CHAR LIMIT=50]. -->
+    <string name="wifi_setting_countrycode_summary">Specify the region code for Wi-Fi</string>
+    <!-- Wi-Fi settings screen, error message when the frequency band could not be set [CHAR LIMIT=50]. -->
+    <string name="wifi_setting_countrycode_error">There was a problem setting the region code.</string>
+    <!-- Wi-Fi settings screen, advanced, title of the item to show the Wi-Fi device's MAC address.-->
 
 </resources>
