[Settings] QS: Add Mobile data tile + fixes (2/2)
    Add mobile data tile acting like the pw tile.
    Remove mobile data function from MobileNetworkTile

    MobileNetworkTile now is acting like AOSP

    renamed internal naming to be more logic

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4990,6 +4990,7 @@
     <string name="title_tile_lockscreen">Lock screen</string>
     <string name="title_tile_lte">LTE</string>
     <string name="title_tile_mobiledata">Mobile data</string>
+    <string name="title_tile_mobilenetwork">Mobile network</string>
     <string name="title_tile_profile">Profile</string>
     <string name="title_tile_autorotate">Orientation</string>
     <string name="title_tile_settings">Settings</string>
