--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5002,6 +5002,7 @@
     <string name="title_tile_wimax">WiMAX</string>
     <string name="title_tile_user">User switcher</string>
     <string name="title_tile_networkmode">Network mode</string>
+    <string name="title_tile_reboot">Reboot</string>
 
     <string name="title_dynamic_tiles">Dynamic tiles</string>
     <string name="dynamic_tiles_note_title">Note</string>
