--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5004,6 +5004,7 @@
     <string name="title_tile_networkmode">Network mode</string>
     <string name="title_tile_reboot">Reboot</string>
     <string name="title_tile_nfc">NFC</string>
+    <string name="title_tile_screen_timeout">Screen timeout</string>
 
     <string name="title_dynamic_tiles">Dynamic tiles</string>
     <string name="dynamic_tiles_note_title">Note</string>
