--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4493,10 +4493,10 @@
     <string name="title_toggle_screentimeout">Toggle Screen timeout</string>
     <string name="title_toggle_mobiledata">Toggle Mobile data</string>
     <string name="title_toggle_lockscreen">Toggle Lock screen</string>
-    <string name="title_toggle_networkmode">Toggle network mode</string>
+    <string name="title_toggle_networkmode">Toggle Network mode</string>
     <string name="title_toggle_autorotate">Toggle Orientation</string>
     <string name="title_toggle_airplane">Toggle Airplane mode</string>
-    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
+    <string name="title_toggle_flashlight">Toggle Torch</string>
     <string name="title_toggle_sleep">Go to sleep</string>
     <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
     <string name="title_toggle_media_previous">Media: Skip to Previous</string>
